[gd_scene load_steps=9 format=2]

[ext_resource path="res://ShopItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ShopContainer.gd" type="Script" id=3]
[ext_resource path="res://PlayerSaleItem.tscn" type="PackedScene" id=5]

[sub_resource type="GDScript" id=5]
script/source = "extends GridContainer

var shop = preload(\"res://Shop.tres\")

func _ready():
	update_to_sell()
	
func update_to_sell():
	var i = 0
	while i < shop.items.size():
		var item = shop.items[i]
		var shopItem = get_child(i)
		shopItem.display_item(item)
		i += 1

"

[sub_resource type="GDScript" id=2]
script/source = "extends GridContainer

var inventory = preload(\"res://Inventory.tres\")

func _ready():
	update_to_sell()
	
func update_to_sell():
	var i = 0
	while i < inventory.items.size():
		var item = inventory.items[i]
		
		var saleItem = get_child(i)
		if item is Item:
			var quantity = inventory.items[i].quantity
			print (\"item: \", quantity)
			if item.type == 'Crop':
				print (\"Crop\")
				saleItem.display_item(item, quantity)
		i += 1


func _on_PlayerSaleItem_update_shop():
	update_to_sell()
"

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[node name="ShopContainer" type="TextureRect"]
script = ExtResource( 3 )

[node name="ShopDisplay" type="GridContainer" parent="."]
margin_left = 550.0
margin_top = 90.0
margin_right = 1000.0
margin_bottom = 690.0
script = SubResource( 5 )

[node name="ShopItem" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 450.0
margin_bottom = 56.0

[node name="ShopItem2" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 60.0
margin_right = 450.0
margin_bottom = 116.0

[node name="ShopItem3" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 120.0
margin_right = 450.0
margin_bottom = 176.0

[node name="ShopItem4" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 180.0
margin_right = 450.0
margin_bottom = 236.0

[node name="ShopItem5" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 240.0
margin_right = 450.0
margin_bottom = 296.0

[node name="ShopItem6" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 300.0
margin_right = 450.0
margin_bottom = 356.0

[node name="ShopItem7" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 360.0
margin_right = 450.0
margin_bottom = 416.0

[node name="ShopItem8" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 420.0
margin_right = 450.0
margin_bottom = 476.0

[node name="ShopItem9" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 480.0
margin_right = 450.0
margin_bottom = 536.0

[node name="ShopItem10" parent="ShopDisplay" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 540.0
margin_right = 450.0
margin_bottom = 596.0

[node name="PlayerSaleDisplay" type="GridContainer" parent="."]
margin_left = 35.0
margin_top = 90.0
margin_right = 485.0
margin_bottom = 690.0
script = SubResource( 2 )

[node name="PlayerSaleItem" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 450.0
margin_bottom = 33.0

[node name="PlayerSaleItem2" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 37.0
margin_right = 450.0
margin_bottom = 70.0

[node name="PlayerSaleItem3" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 74.0
margin_right = 450.0
margin_bottom = 107.0

[node name="PlayerSaleItem4" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 111.0
margin_right = 450.0
margin_bottom = 144.0

[node name="PlayerSaleItem5" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 148.0
margin_right = 450.0
margin_bottom = 181.0

[node name="PlayerSaleItem6" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 185.0
margin_right = 450.0
margin_bottom = 218.0

[node name="PlayerSaleItem7" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 222.0
margin_right = 450.0
margin_bottom = 255.0

[node name="PlayerSaleItem8" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 259.0
margin_right = 450.0
margin_bottom = 292.0

[node name="PlayerSaleItem9" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 296.0
margin_right = 450.0
margin_bottom = 329.0

[node name="PlayerSaleItem10" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 333.0
margin_right = 450.0
margin_bottom = 366.0

[node name="PlayerSaleItem11" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 370.0
margin_right = 450.0
margin_bottom = 403.0

[node name="PlayerSaleItem12" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 407.0
margin_right = 450.0
margin_bottom = 440.0

[node name="PlayerSaleItem13" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 444.0
margin_right = 450.0
margin_bottom = 477.0

[node name="PlayerSaleItem14" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 481.0
margin_right = 450.0
margin_bottom = 514.0

[node name="PlayerSaleItem15" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 518.0
margin_right = 450.0
margin_bottom = 551.0

[node name="PlayerSaleItem16" parent="PlayerSaleDisplay" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 555.0
margin_right = 450.0
margin_bottom = 588.0

[node name="SellLabel" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 20.0
margin_right = 510.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="SellLabel"]
margin_left = 181.0
margin_top = 4.0
margin_right = 221.0
margin_bottom = 20.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 6 )
text = "Sell"

[node name="BuyLabel" type="ColorRect" parent="."]
margin_left = 520.0
margin_top = 20.0
margin_right = 1020.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 1 )

[node name="Label2" type="Label" parent="BuyLabel"]
margin_left = 181.0
margin_top = 4.0
margin_right = 221.0
margin_bottom = 20.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 7 )
text = "Buy"

[connection signal="buy_item" from="ShopDisplay/ShopItem" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem2" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem3" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem4" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem5" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem6" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem7" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem8" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem9" to="." method="_on_ShopItem_buy_item"]
[connection signal="buy_item" from="ShopDisplay/ShopItem10" to="." method="_on_ShopItem_buy_item"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem2" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem2" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem3" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem3" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem4" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem4" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem5" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem5" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem6" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem6" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem7" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem7" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem8" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem8" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem9" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem9" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem10" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem10" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem11" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem11" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem12" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem12" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem13" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem13" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem14" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem14" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem15" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem15" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
[connection signal="sell_item" from="PlayerSaleDisplay/PlayerSaleItem16" to="." method="_on_PlayerSaleItem_sell_item"]
[connection signal="update_shop" from="PlayerSaleDisplay/PlayerSaleItem16" to="PlayerSaleDisplay" method="_on_PlayerSaleItem_update_shop"]
